--- a/webserver/anaspingpong/templates/load/index.html
+++ b/webserver/anaspingpong/templates/load/index.html
@@ -23,7 +23,10 @@
         <input  class="button" type="submit" value="Search!" />
                 </form>
     </div>
-      
+    <div id="predicting">
+        <img src="static/images/fedc3967823183.5b47982ca78ea.gif" width="300px" />
+    </div>
+
     <div id="map"></div>
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
