--- a/webserver/anaspingpong/templates/load/index.html
+++ b/webserver/anaspingpong/templates/load/index.html
@@ -5,8 +5,12 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap' async defer></script>
+
   </head>
   <body>
+
+ <!-- <body> -->
     <div id="home">
        <button onclick="goHome()">Go to my current location</button></br>
        <form action="/predict" method="post">
@@ -29,11 +33,15 @@
 
     <div id="map"></div>
 
-    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+
+
+   <!-- <div id="map"></div>-->
+
+    <!-- Async script executes immediately and must be after any DOM elements used in callback.
     <script
 	    src="https://maps.googleapis.com/maps/api/js?key={{key}}&callback=initMap&v=weekly"
       async
-    ></script>
+    ></script>-->
     <script src="{{ url_for('static', filename='index.js') }}"></script>
   </body>
 </html>
